hphp/hack/test/typecheck/function_pointer/class_const_visibility2.php.exp
File "class_const_visibility2.php", line 8, characters 13-15:
You cannot access this member (Typing[4112])
File "class_const_visibility2.php", line 4, characters 27-29:
This member is private
