hphp/hack/test/typecheck/function_pointer/class_const_visibility2.php
<?hh

final class Foo {
  private static function bar(int $x): void {}
}

function baz(): void {
  $x = Foo::bar<>;
  $x(4);
}
